# cmake_erlang

./: .gitignore  README.md
cmake/: FindErlang.cmake
examples/nif/: CMakeLists.txt  foo.c  foo.erl
